Menu + Hero L Ok

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   <header>
       <!-- Menu Superior -->
       <div class="top-bar">
-        <div class="wrapper1280">
-
+        <div class="container">
           <!-- Logo Perelló i Associats -->
           <div class="logo">
             <img src="img/simbol-logo-desktop.png" alt="Símbol Perelló i Associats">
@@ -44,27 +43,25 @@
               <li><a href="javascript:void(0)" id="entitats_socials_link">Entitats Socials</a></li>
             </ul>
           </nav>
-        </div>
+        </div> 
       </div>
 
       <!-- Hero -->
       <div class="hero">
-        <div class="wrapper1280">
           <div class="titolseccio">
             <h1>Cerques una Gestoria?</h1>
             <hr class="stroke">
             <h3>Descobreix que podem fer pel teu negoci</h3>  
           </div>
           <div>
-            <a href="javascript:void(0)" id="contacte_link">Contacte</a>
+            <!-- <a href="javascript:void(0)" id="contacte_link">Contacte</a> -->
+            <a class="cta hvr-sweep-to-right" href="javascript:void(0)" id="contacte_link">Contacte</a>
           </div>
-        </div>
       </div>
   </header>
 
   <!-- 1-Particulars -->
   <section id="particulars">
-   <div class="wrapper1280">
     <div class="titolseccio">
       <h2 id="prova_boto">Particulars</h2>
       <hr class="stroke">
@@ -91,7 +88,6 @@
         </ul>
       </div>
     </div>
-  </div>
   </section>
 
   <!-- 2-Autònoms i Freelance -->
