Últim pas abans del redisseny

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="titolseccio">
       <h2 id="prova_boto">Particulars</h2>
       <hr class="stroke">
-      <h3>Oferim serveis per fer-te la vida més fàcil</h3>
+      <h3>Oferim serveis per fer-te la vida més fàcil<br>Més de 200 particulars ja confien en els nostres serveis</h3>
     </div>
     <div class="contingut clearfix">
       <div class="contenidor-foto-esquerra">                            
@@ -77,14 +77,15 @@
         </figure>
       </div>
       <div class="contenidor-text-dreta">
-        <h4>Més de 200 particulars<br>ja confien en els nostres serveis</h4>
+        <!-- <h4>Més de 200 particulars<br>ja confien en els nostres serveis</h4> -->
         <ul>
-          <li class="llista">· Gestió d’altes i baixes d’Autònoms</li>
-          <li class="llista">· Liquidació de la Seguretat Social</li>
-          <li class="llista">· Contractació d’empleats de la llar</li>
-          <li class="llista">· Herències</li>
-          <li class="llista">· Separació de bens</li>
-          <li class="llista">· Nom de un altre servei</li>
+          <li class="llista">- Declaració Renta i Patrimoni</li>
+          <li class="llista">- Herències</li>
+          <li class="llista">- Donacions</li>
+          <li class="llista">- Estudis de la tributació en operacions de compra-venta</li>
+          <li class="llista">- Confecció contractes i nòmines Empleada de la llar</li>
+          <li class="llista">- Prestacions Seguretat Social i jubilacions</li>
+          <li class="llista">- Assistència Inspeccions Tributàries</li>
         </ul>
       </div>
     </div>
@@ -102,12 +103,13 @@
       <div class="contenidor-text-esquerra">
         <h4>Oferim serveis per<br>alleugerir el teu dia a dia</h4>
         <ul>
-          <li class="llista">· Gestió d’altes i baixes d’Autònoms</li>
-          <li class="llista">· Liquidació de la Seguretat Social</li>
-          <li class="llista">· Contractació d’empleats de la llar</li>
-          <li class="llista">· Herències</li>
-          <li class="llista">· Separació de bens</li>
-          <li class="llista">· Nom de un altre servei</li>
+          <li class="llista">Gestions alta i baixa d'autònoms</li>
+          <li class="llista">Gestions alta i baixa d'IAE</li>
+          <li class="llista">Assessorament fiscal i comptable</li>
+          <li class="llista">Elaboració comptabilitat</li>
+          <li class="llista">Confecció i presentació liquidacions trimestrals (IVA,IRPF...)</li>
+          <li class="llista">Confecció i presentació resums anuals</li>
+          <li class="llista">Assistència Inspeccions Tributàries</li>
         </ul>
       </div>
       <div class="contenidor-foto-dreta">
@@ -142,12 +144,18 @@
       <div class="contenidor-text-dreta">
           <h4>Creiem en la feina ben feta.<br>El vostre èxit és el nostre objectiu.</h4>
           <ul>
-            <li class="llista">· Gestió d’altes i baixes d’Autònoms</li>
-            <li class="llista">· Liquidació de la Seguretat Social</li>
-            <li class="llista">· Contractació d’empleats de la llar</li>
-            <li class="llista">· Herències</li>
-            <li class="llista">· Separació de bens</li>
-            <li class="llista">· Nom de un altre servei</li>
+            <li class="llista">Constitució Societats</li>
+            <li class="llista">Assessorament fiscal i comptable</li>
+            <li class="llista">Elaboració comptabilitat i presentació llibres comptables al Registre Mercantil</li>
+            <li class="llista">Confecció i presentació liquidacions trimestrals (111, 115, 303, 349,..)</li>
+            <li class="llista">Confecció i presentació resums anuals (180,190, 347, 390,..)</li>
+            <li class="llista">Confecció i presentació Impost de Societats i Comptes anuals.</li>
+            <li class="llista">Confecció i presentació recursos Agència Tributària</li>
+            <li class="llista">Assistència Inspeccions Tributàries</li>
+            <li class="llista">Estudi i elaboració informes econòmics-financers i Plans de Viabilitat</li>
+            <li class="llista">Redacció contractes mercantils</li>
+            <li class="llista">Assessorament laboral</li>
+            <li class="llista">Confecció contractes de treball, nòmines, Seguros Socials</li>
           </ul>
         </div>
       </div>
@@ -158,7 +166,7 @@
   <section id="gran_empresa">
    <div class="wrapper1280">
     <div class="titolseccio">
-      <h2>Gran Empresa</h2>
+      <h2>Mitjana i Gran Empresa</h2>
       <hr class="stroke">
       <h3>Utilitzem la nostra experiència per trobar la millor estratègia</h3>
     </div>
@@ -166,12 +174,12 @@
       <div class="contenidor-text-esquerra">
         <h4>Utilitzem la nostra experiència<br>per trobar la millor estratègia</h4>
         <ul>
-          <li class="llista">· Gestió d’altes i baixes d’Autònoms</li>
-          <li class="llista">· Liquidació de la Seguretat Social</li>
-          <li class="llista">· Contractació d’empleats de la llar</li>
-          <li class="llista">· Herències</li>
-          <li class="llista">· Separació de bens</li>
-          <li class="llista">· Nom de un altre servei</li>
+          <li class="llista">Assessorament fiscal i comptable</li>
+          <li class="llista">Confecció i presentació impostos</li>
+          <li class="llista">Confecció i presentació recursos Agència Tributària</li>
+          <li class="llista">Assistència Inspeccions Tributàries</li>
+          <li class="llista">Assessorament laboral</li>
+          <li class="llista">Confecció contractes de treball, nòmines, Seguros Socials</li>
         </ul>
       </div>
       <div class="contenidor-foto-dreta">
@@ -206,12 +214,15 @@
       <div class="contenidor-text-dreta">
         <h4>Treballem per persones<br>que ajuden persones</h4>
         <ul>
-          <li class="llista">· Gestió d’altes i baixes d’Autònoms</li>
-          <li class="llista">· Liquidació de la Seguretat Social</li>
-          <li class="llista">· Contractació d’empleats de la llar</li>
-          <li class="llista">· Herències</li>
-          <li class="llista">· Separació de bens</li>
-          <li class="llista">· Nom de un altre servei</li>
+          <li class="llista">Elaboració comptabilitat</li>
+          <li class="llista">Assessorament fiscal i comptable</li>
+          <li class="llista">Confecció i presentació liquidacions trimestrals</li>
+          <li class="llista">Confecció i presentació resums anuals</li>
+          <li class="llista">Redacció informes financers</li>
+          <li class="llista">Confecció i presentació recursos Agència Tributària</li>
+          <li class="llista">Assessorament laboral</li>
+          <li class="llista">Confecció contractes de treball, nòmines, Seguros Socials</li>
+          <li class="llista">Assistència Inspeccions Tributàries</li>
         </ul>
         </div>
       </div>
