Primer mòdul començat

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Hero -->
       <div class="hero">
           <div class="titolseccio">
-            <h1>Cerques una Gestoria?</h1>
+            <h1>Necessites una Gestoria?</h1>
             <hr class="stroke">
             <h3>Descobreix que podem fer pel teu negoci</h3>  
           </div>
@@ -62,30 +62,27 @@
 
   <!-- 1-Particulars -->
   <section id="particulars">
-    <div class="titolseccio">
-      <h2 id="prova_boto">Particulars</h2>
-      <hr class="stroke">
-      <h3>Oferim serveis per fer-te la vida més fàcil<br>Més de 200 particulars ja confien en els nostres serveis</h3>
-    </div>
     <div class="contingut clearfix">
-      <div class="contenidor-foto-esquerra">                            
+      <div class="contenidor-esquerra">                          
         <figure id="foto1">
           <img src="img/particulars1.jpg" alt="Consultoria per particulars">
         </figure>
-        <figure id="foto2">
-          <img class ="border" src="img/particulars2.jpg" alt="Consultoria per particulars">
-        </figure>
       </div>
-      <div class="contenidor-text-dreta">
-        <!-- <h4>Més de 200 particulars<br>ja confien en els nostres serveis</h4> -->
+      <div class="contenidor-dreta">
+         <div class="titolseccio">
+          <h5>Els nostres serveis per els</h5>
+          <h2 id="prova_boto">Particulars</h2>
+          <hr class="stroke">
+          <h3>Oferim serveis per fer-te la vida més fàcil.<br>Més de 200 particulars ja confien en nosaltres!</h3>
+        </div>
         <ul>
-          <li class="llista">- Declaració Renta i Patrimoni</li>
+          <li class="llista">- Declaració de la renta i del patrimoni</li>
           <li class="llista">- Herències</li>
           <li class="llista">- Donacions</li>
-          <li class="llista">- Estudis de la tributació en operacions de compra-venta</li>
-          <li class="llista">- Confecció contractes i nòmines Empleada de la llar</li>
-          <li class="llista">- Prestacions Seguretat Social i jubilacions</li>
-          <li class="llista">- Assistència Inspeccions Tributàries</li>
+          <li class="llista">- Estudis de la tributació en operacions de compra/venta</li>
+          <li class="llista">- Contractes i nòmines per empleades de la llar</li>
+          <li class="llista">- Prestacions de la seguretat social i jubilacions</li>
+          <li class="llista">- Assistència en inspeccions tributàries</li>
         </ul>
       </div>
     </div>
@@ -95,6 +92,7 @@
   <section id="autonoms">
    <div class="wrapper1280">
     <div class="titolseccio">
+      <h5>Els nostres serveis per els</h5>
       <h2>Autònoms i Freelances</h2>
       <hr class="stroke">
       <h3>Treballem perquè els professionals puguin centrar-se en les seves activitats</h3>
@@ -128,6 +126,7 @@
   <section id="pimes">
    <div class="wrapper1280">
     <div class="titolseccio">
+      <h5>Els nostres serveis per les</h5>
       <h2 id="prova_boto">PIMES i Startups</h2>
       <hr class="stroke">
       <h3>Assessorem als emprenedors que comencen i a la petita empresa</h3>
@@ -138,6 +137,9 @@
           <img src="img/pimes1.jpg" alt="Consultoria per particulars">
         </figure>
         <figure id="foto6">
+          <img class ="border" src="img/pimes2.jpg" alt="Consultoria per particulars">
+        </figure>
+        <figure id="foto7">
           <img class ="border" src="img/pimes2.jpg" alt="Consultoria per particulars">
         </figure>
       </div>
@@ -166,6 +168,7 @@
   <section id="gran_empresa">
    <div class="wrapper1280">
     <div class="titolseccio">
+      <h5>Els nostres serveis per la</h5>
       <h2>Mitjana i Gran Empresa</h2>
       <hr class="stroke">
       <h3>Utilitzem la nostra experiència per trobar la millor estratègia</h3>
@@ -183,10 +186,10 @@
         </ul>
       </div>
       <div class="contenidor-foto-dreta">
-        <figure id="foto7">
+        <figure id="foto8">
           <img src="img/granempresa1.jpg" alt="Consultoria per autònoms">
         </figure>
-        <figure id="foto8">
+        <figure id="foto9">
           <img src="img/granempresa2.jpg" alt="Consultoria per autònoms">
         </figure>
       </div>
@@ -198,6 +201,7 @@
   <section id="entitats_socials">
    <div class="wrapper1280">
     <div class="titolseccio">
+      <h5>Els nostres serveis per les</h5>
       <h2>Entitats Socials</h2>
       <hr class="stroke">
       <h3>Especialitzats en Fundacions, Cooperatives, ONG’s i associacions sens ànim de lucre</h3>
@@ -206,9 +210,6 @@
       <div class="contenidor-foto-esquerra">                            
         <figure id="foto9">
           <img src="img/entitatsocial1.jpg" alt="Consultoria per particulars">
-        </figure>
-        <figure id="foto10">
-          <img class ="border" src="img/entitatsocial2.jpg" alt="Consultoria per particulars">
         </figure>
       </div>
       <div class="contenidor-text-dreta">
@@ -234,22 +235,11 @@
 <section id="contacte">
   <div class="wrapper1280">
     <div class="titolseccio">
-      <h2 class="info">Informa't, truca al 93 368 22 78</h2>
+      <h2 class="info">Informa't, truca al 93 368 37 80</h2>
       <hr class="stroke-blau">
-      <h3 class="info">Obert de dilluns a divendres de 9:00h a 14:00h i de 16:00h a 20:00h</h3>
+      <h3 class="info">Obert de dilluns a divendres de 9:00 a 14:00 i de 16:00 a 20:00</h3>
     </div>
   <div class="clearfix">  
-    <div class="mapa">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.63671938081!2d2.144450815059026!3d41.40369510294764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2a058ea8e07%3A0xb5fac3a5b57f0243!2sJosep+Mar%C3%ADa+Perell%C3%B3+I+Associats+S+L!5e0!3m2!1sca!2ses!4v1458822770676" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <div class="transports">
-          <ul>
-            <li><img src="tren-icon.png" alt="">Plaça Molina</li>
-            <li><img src="metro-icon.png" alt="">L3 - Lesseps</li>
-            <li><img src="bus-icon.png" alt="">H6 / V15</li>
-          </ul>
-      </div>
-    </div>
-
     <div class="form">
       <form action="demo_form.asp">
         Nom:<input type="text" name="Nom" value="Escriu el teu nom...">
@@ -265,6 +255,16 @@
         <input class="boto-blau" type="submit" value="Enviar el formulari">
        </form>
      </div> 
+     <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.63671938081!2d2.144450815059026!3d41.40369510294764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2a058ea8e07%3A0xb5fac3a5b57f0243!2sJosep+Mar%C3%ADa+Perell%C3%B3+I+Associats+S+L!5e0!3m2!1sca!2ses!4v1458822770676" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="transports">
+          <ul>
+            <li><img src="tren-icon.png" alt="">Plaça Molina</li>
+            <li><img src="metro-icon.png" alt="">L3 - Lesseps</li>
+            <li><img src="bus-icon.png" alt="">H6 / V15</li>
+          </ul>
+      </div>
+    </div>
     </div>              
   </section>
 
