Primer Modul more or less L

--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
 
   <!-- 1-Particulars -->
   <section id="particulars">
-    <div class="contingut clearfix">
+    <div class="clearfix">
       <div class="contenidor-esquerra">                          
-        <figure id="foto1">
-          <img src="img/particulars1.jpg" alt="Consultoria per particulars">
-        </figure>
+        <div class="marc-foto-1 image1">
+        </div>
+        <div class="marc-foto-1 forma1">
+        </div>
       </div>
+
       <div class="contenidor-dreta">
          <div class="titolseccio">
           <h5>Els nostres serveis per els</h5>
