--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
 
       <div class="contenidor-dreta">
          <div class="titolseccio">
-          <h5>Els nostres serveis per els</h5>
+          <h5>Els nostres serveis pels</h5>
           <h2 id="prova_boto">Particulars</h2>
-          <hr class="stroke">
+          <hr class="stroke-titol">
           <h3>Oferim serveis per fer-te la vida més fàcil.<br>Més de 200 particulars ja confien en nosaltres!</h3>
         </div>
-        <ul>
-          <li class="llista">- Declaració de la renta i del patrimoni</li>
-          <li class="llista">- Herències</li>
-          <li class="llista">- Donacions</li>
-          <li class="llista">- Estudis de la tributació en operacions de compra/venta</li>
-          <li class="llista">- Contractes i nòmines per empleades de la llar</li>
-          <li class="llista">- Prestacions de la seguretat social i jubilacions</li>
-          <li class="llista">- Assistència en inspeccions tributàries</li>
+        <ul class="serveis">
+          <li class="llista">-  Declaració de la renta i del patrimoni</li>
+          <li class="llista">-  Herències</li>
+          <li class="llista">-  Donacions</li>
+          <li class="llista">-  Estudis de la tributació en operacions de compra/venta</li>
+          <li class="llista">-  Contractes i nòmines per empleades de la llar</li>
+          <li class="llista">-  Prestacions de la seguretat social i jubilacions</li>
+          <li class="llista">-  Assistència en inspeccions tributàries</li>
         </ul>
       </div>
     </div>
