--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <header>
       <!-- Menu Superior -->
       <div class="top-bar">
-        <div class="container">
+        <div class="menu-container">
           <!-- Logo Perelló i Associats -->
           <div class="logo">
-            <img src="img/simbol-logo-desktop.png" alt="Símbol Perelló i Associats">
+            <img src="img/simbol-logo-desktop.png" alt=" Símbol Perelló i Associats">
             <p id="lletres-logo">Perelló i Associats</p>
           </div>
 
@@ -62,7 +62,7 @@
 
   <!-- 1-Particulars -->
   <section id="particulars">
-    <div class="clearfix">
+    <div class="container clearfix">
       <div class="contenidor-esquerra">                          
         <div class="marc-foto-1 image1">
         </div>
@@ -78,51 +78,50 @@
           <h3>Oferim serveis per fer-te la vida més fàcil.<br>Més de 200 particulars ja confien en nosaltres!</h3>
         </div>
         <ul class="serveis">
-          <li class="llista">-  Declaració de la renta i del patrimoni</li>
-          <li class="llista">-  Herències</li>
-          <li class="llista">-  Donacions</li>
-          <li class="llista">-  Estudis de la tributació en operacions de compra/venta</li>
-          <li class="llista">-  Contractes i nòmines per empleades de la llar</li>
-          <li class="llista">-  Prestacions de la seguretat social i jubilacions</li>
-          <li class="llista">-  Assistència en inspeccions tributàries</li>
+          <li class="llista"><span class="blue-dash">–</span>Declaració de la renta i del patrimoni</li>
+          <li class="llista"><span class="blue-dash">–</span>Herències</li>
+          <li class="llista"><span class="blue-dash">–</span>Donacions</li>
+          <li class="llista"><span class="blue-dash">–</span>Estudis de la tributació en operacions de compra/venta</li>
+          <li class="llista"><span class="blue-dash">–</span>Contractes i nòmines per empleades de la llar</li>
+          <li class="llista"><span class="blue-dash">–</span>Prestacions de la seguretat social i jubilacions</li>
+          <li class="llista"><span class="blue-dash">–</span>Assistència en inspeccions tributàries</li>
         </ul>
       </div>
     </div>
   </section>
 
-  <!-- 2-Autònoms i Freelance -->
+ <!-- 2-Autònoms i Freelance -->
   <section id="autonoms">
-   <div class="wrapper1280">
-    <div class="titolseccio">
-      <h5>Els nostres serveis per els</h5>
-      <h2>Autònoms i Freelances</h2>
-      <hr class="stroke">
-      <h3>Treballem perquè els professionals puguin centrar-se en les seves activitats</h3>
-    </div>
-    <div class="contingut clearfix">
-      <div class="contenidor-text-esquerra">
-        <h4>Oferim serveis per<br>alleugerir el teu dia a dia</h4>
-        <ul>
-          <li class="llista">Gestions alta i baixa d'autònoms</li>
-          <li class="llista">Gestions alta i baixa d'IAE</li>
-          <li class="llista">Assessorament fiscal i comptable</li>
-          <li class="llista">Elaboració comptabilitat</li>
-          <li class="llista">Confecció i presentació liquidacions trimestrals (IVA,IRPF...)</li>
-          <li class="llista">Confecció i presentació resums anuals</li>
-          <li class="llista">Assistència Inspeccions Tributàries</li>
+    <div class="container clearfix">
+      <div class="contenidor-esquerra">
+         <div class="titolseccio">
+          <h5>Els nostres serveis pels</h5>
+          <h2 id="prova_boto">Autònoms i Freelances</h2>
+          <hr class="stroke-titol">
+          <h3>Treballem perquè els professionals<br>puguin centrar-se en les seves activitats</h3>
+        </div>
+        <ul class="serveis">
+          <li class="llista"><span class="blue-dash">–</span>Gestions alta i baixa d'autònoms</li>
+          <li class="llista"><span class="blue-dash">–</span>Gestions alta i baixa d'IAE</li>
+          <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
+          <li class="llista"><span class="blue-dash">–</span>Elaboració comptabilitat</li>
+          <li class="llista"><span class="blue-dash">–</span>Confecció i presentació liquidacions trimestrals (IVA,IRPF...)</li>
+          <li class="llista"><span class="blue-dash">–</span>Confecció i presentació de resums anuals</li>
+          <li class="llista"><span class="blue-dash">–</span>Assistència en inspeccions tributàries</li>
         </ul>
       </div>
-      <div class="contenidor-foto-dreta">
-        <figure id="foto3">
-          <img src="img/autonoms1.jpg" alt="Consultoria per autònoms">
-        </figure>
-        <figure id="foto4">
-          <img src="img/autonoms2.jpg" alt="Consultoria per autònoms">
-        </figure>
+      <div class="contenidor-dreta clearfix">                          
+        <div class="marc-foto-2 image2">
+        </div>
+        <div class="marc-foto-3 image3">
+        </div>
+        <div class="marc-foto-1 forma2">
+        </div>
       </div>
-    </div>   
-  </div>
+    </div>
   </section>
+
+
 
   <!-- 3-PIMES i Startups -->
   <section id="pimes">
@@ -148,89 +147,89 @@
       <div class="contenidor-text-dreta">
           <h4>Creiem en la feina ben feta.<br>El vostre èxit és el nostre objectiu.</h4>
           <ul>
-            <li class="llista">Constitució Societats</li>
-            <li class="llista">Assessorament fiscal i comptable</li>
-            <li class="llista">Elaboració comptabilitat i presentació llibres comptables al Registre Mercantil</li>
-            <li class="llista">Confecció i presentació liquidacions trimestrals (111, 115, 303, 349,..)</li>
-            <li class="llista">Confecció i presentació resums anuals (180,190, 347, 390,..)</li>
-            <li class="llista">Confecció i presentació Impost de Societats i Comptes anuals.</li>
-            <li class="llista">Confecció i presentació recursos Agència Tributària</li>
-            <li class="llista">Assistència Inspeccions Tributàries</li>
-            <li class="llista">Estudi i elaboració informes econòmics-financers i Plans de Viabilitat</li>
-            <li class="llista">Redacció contractes mercantils</li>
-            <li class="llista">Assessorament laboral</li>
-            <li class="llista">Confecció contractes de treball, nòmines, Seguros Socials</li>
+            <li class="llista"><span class="blue-dash">–</span>Constitució Societats</li>
+            <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
+            <li class="llista"><span class="blue-dash">–</span>Elaboració comptabilitat i presentació llibres comptables al Registre Mercantil</li>
+            <li class="llista"><span class="blue-dash">–</span>Confecció i presentació liquidacions trimestrals (111, 115, 303, 349,..)</li>
+            <li class="llista"><span class="blue-dash">–</span>Confecció i presentació resums anuals (180,190, 347, 390,..)</li>
+            <li class="llista"><span class="blue-dash">–</span>Confecció i presentació Impost de Societats i Comptes anuals.</li>
+            <li class="llista"><span class="blue-dash">–</span>Confecció i presentació recursos Agència Tributària</li>
+            <li class="llista"><span class="blue-dash">–</span>Assistència Inspeccions Tributàries</li>
+            <li class="llista"><span class="blue-dash">–</span>Estudi i elaboració informes econòmics-financers i Plans de Viabilitat</li>
+            <li class="llista"><span class="blue-dash">–</span>Redacció contractes mercantils</li>
+            <li class="llista"><span class="blue-dash">–</span>Assessorament laboral</li>
+            <li class="llista"><span class="blue-dash">–</span>Confecció contractes de treball, nòmines, Seguros Socials</li>
           </ul>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- 4-Gran Empresa -->
+    <!-- 4-Gran Empresa -->
   <section id="gran_empresa">
-   <div class="wrapper1280">
-    <div class="titolseccio">
-      <h5>Els nostres serveis per la</h5>
-      <h2>Mitjana i Gran Empresa</h2>
-      <hr class="stroke">
-      <h3>Utilitzem la nostra experiència per trobar la millor estratègia</h3>
-    </div>
-    <div class="contingut clearfix">
-      <div class="contenidor-text-esquerra">
-        <h4>Utilitzem la nostra experiència<br>per trobar la millor estratègia</h4>
-        <ul>
-          <li class="llista">Assessorament fiscal i comptable</li>
-          <li class="llista">Confecció i presentació impostos</li>
-          <li class="llista">Confecció i presentació recursos Agència Tributària</li>
-          <li class="llista">Assistència Inspeccions Tributàries</li>
-          <li class="llista">Assessorament laboral</li>
-          <li class="llista">Confecció contractes de treball, nòmines, Seguros Socials</li>
+    <div class="container clearfix">
+      <div class="contenidor-esquerra">                          
+        <div class="marc-foto-1 image1">
+        </div>
+        <div class="marc-foto-1 forma1">
+        </div>
+      </div>
+
+      <div class="contenidor-dreta">
+         <div class="titolseccio">
+          <h5>Els nostres serveis per la</h5>
+          <h2 id="prova_boto">Mitjana i Gran Empresa</h2>
+          <hr class="stroke-titol">
+          <h3>Utilitzem la nostra experiència per trobar la millor estratègia</h3>
+        </div>
+        <ul class="serveis">
+          <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
+          <li class="llista"><span class="blue-dash">–</span>Confecció i presentació impostos</li>
+          <li class="llista"><span class="blue-dash">–</span>Confecció i presentació recursos Agència Tributària</li>
+          <li class="llista"><span class="blue-dash">–</span>Assistència Inspeccions Tributàries</li>
+          <li class="llista"><span class="blue-dash">–</span>Assessorament laboral</li>
+          <li class="llista"><span class="blue-dash">–</span>Confecció contractes de treball, nòmines, Seguros Socials</li>
         </ul>
       </div>
-      <div class="contenidor-foto-dreta">
-        <figure id="foto8">
-          <img src="img/granempresa1.jpg" alt="Consultoria per autònoms">
-        </figure>
-        <figure id="foto9">
-          <img src="img/granempresa2.jpg" alt="Consultoria per autònoms">
-        </figure>
-      </div>
-      </div>   
     </div>
   </section>
 
-  <!-- 5-Entitats Socials -->
+
+
+  
+ <!-- 5-Entitats Socials -->
   <section id="entitats_socials">
-   <div class="wrapper1280">
-    <div class="titolseccio">
-      <h5>Els nostres serveis per les</h5>
-      <h2>Entitats Socials</h2>
-      <hr class="stroke">
-      <h3>Especialitzats en Fundacions, Cooperatives, ONG’s i associacions sens ànim de lucre</h3>
-    </div>
-    <div class="contingut clearfix">
-      <div class="contenidor-foto-esquerra">                            
-        <figure id="foto9">
-          <img src="img/entitatsocial1.jpg" alt="Consultoria per particulars">
-        </figure>
-      </div>
-      <div class="contenidor-text-dreta">
-        <h4>Treballem per persones<br>que ajuden persones</h4>
-        <ul>
-          <li class="llista">Elaboració comptabilitat</li>
-          <li class="llista">Assessorament fiscal i comptable</li>
-          <li class="llista">Confecció i presentació liquidacions trimestrals</li>
-          <li class="llista">Confecció i presentació resums anuals</li>
-          <li class="llista">Redacció informes financers</li>
-          <li class="llista">Confecció i presentació recursos Agència Tributària</li>
-          <li class="llista">Assessorament laboral</li>
-          <li class="llista">Confecció contractes de treball, nòmines, Seguros Socials</li>
-          <li class="llista">Assistència Inspeccions Tributàries</li>
+    <div class="container clearfix">
+      <div class="contenidor-esquerra">
+         <div class="titolseccio">
+          <h5>Els nostres serveis per les</h5>
+          <h2 id="prova_boto">Entitats Socials</h2>
+          <hr class="stroke-titol">
+          <h3>Treballem per persones<br>que ajuden persones</h3>
+        </div>
+        <ul class="serveis">
+          <li class="llista"><span class="blue-dash">–</span>Elaboració comptabilitat</li>
+          <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal,comptable i laboral</li>
+          <li class="llista"><span class="blue-dash">–</span>Confecció i presentació liquidacions trimestrals</li>
+          <li class="llista"><span class="blue-dash">–</span>Confecció i presentació resums anuals</li>
+          <li class="llista"><span class="blue-dash">–</span>Redacció informes financers</li>
+          <li class="llista"><span class="blue-dash">–</span>Presentació de recursos a l’Agència Tributària</li>
+          <li class="llista"><span class="blue-dash">–</span>Assistència en Inspeccions Tributàries</li>
+          <li class="llista"><span class="blue-dash">–</span>Contractes de treball, nòmines i seguros socials</li>
         </ul>
+      </div>
+      <div class="contenidor-dreta">                          
+        <div class="marc-foto-2 image2">
+        </div>
+        <div class="marc-foto-2 image3">
+        </div>
+        <div class="marc-foto-2 forma2">
         </div>
       </div>
     </div>
   </section>
+
+
 
 <!-- Contacte -->
 
