--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 
   <!-- 1-Particulars -->
   <section id="particulars">
-    <div class="container clearfix">
+    <div class="clearfix">
       <div class="contenidor-esquerra">                          
         <div class="marc-foto-1 image1">
         </div>
-        <div class="marc-foto-1 forma1">
+        <div class="marc-forma-1 forma1">
         </div>
       </div>
 
       <div class="contenidor-dreta">
-         <div class="titolseccio">
+         <div>
           <h5>Els nostres serveis pels</h5>
           <h2 id="prova_boto">Particulars</h2>
           <hr class="stroke-titol">
@@ -91,10 +91,10 @@
   </section>
 
  <!-- 2-Autònoms i Freelance -->
-  <section id="autonoms">
-    <div class="container clearfix">
+  <section id="autonoms" >
+    <div class="contenidor clearfix">
       <div class="contenidor-esquerra">
-         <div class="titolseccio">
+         <div class="text-esquerra">
           <h5>Els nostres serveis pels</h5>
           <h2 id="prova_boto">Autònoms i Freelances</h2>
           <hr class="stroke-titol">
@@ -115,8 +115,8 @@
         </div>
         <div class="marc-foto-3 image3">
         </div>
-        <div class="marc-foto-1 forma2">
-        </div>
+       <!--  <div class="marc-foto-1 forma2">
+        </div> -->
       </div>
     </div>
   </section>
