--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </header>
 
-    <div class="serveis-clients">
+    <main class="serveis-clients">
       <!-- 1-Particulars -->
         <section id="particulars" class="clearfix">
             <div class="contenidor-esquerra">                         
@@ -88,7 +88,7 @@
         </section>
 
        <!-- 2-Autònoms i Freelance -->
-        <section id="autonoms" class="clearfix" >
+        <section id="autonoms" class="clearfix">
           <div class="contenidor-esquerra">
                 <div class="esquerra">
                   <h5>Els nostres serveis pels</h5>
@@ -111,7 +111,7 @@
               </div>
               <div class="marc-foto-3 image3">
               </div>
-             <!--  <div class="marc-foto-1 forma2">
+              <!-- <div class="marc-foto-1 forma2">
               </div> -->
             </div>
         </section>
@@ -119,45 +119,39 @@
 
 
         <!-- 3-PIMES i Startups -->
-        <section id="pimes">
-         <div class="wrapper1280">
-          <div class="titolseccio">
-            <h5>Els nostres serveis per les</h5>
-            <h2 id="prova_boto">PIMES i Startups</h2>
-            <div class="stroke-titol"></div>
-            <h3>Assessorem als emprenedors que comencen i a la petita empresa</h3>
+        <section id="pimes" class="clearfix">
+          <div class="menu-container">
+            <div class="marc-foto-4 image4"></div>
+            <div class="marc-foto-4 image5"></div>
+            <div class="marc-foto-4 image6"></div>
+            <div class="rectangle-horitzontal"></div>
           </div>
-          <div class="contingut clearfix">
-            <div class="contenidor-foto-esquerra">                            
-              <figure id="foto5">
-                <img src="img/pimes1.jpg" alt="Consultoria per particulars">
-              </figure>
-              <figure id="foto6">
-                <img class ="border" src="img/pimes2.jpg" alt="Consultoria per particulars">
-              </figure>
-              <figure id="foto7">
-                <img class ="border" src="img/pimes2.jpg" alt="Consultoria per particulars">
-              </figure>
-            </div>
-            <div class="contenidor-text-dreta">
-                <h4>Creiem en la feina ben feta.<br>El vostre èxit és el nostre objectiu.</h4>
-                <ul>
-                  <li class="llista"><span class="blue-dash">–</span>Constitució Societats</li>
-                  <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
-                  <li class="llista"><span class="blue-dash">–</span>Elaboració comptabilitat i presentació llibres comptables al Registre Mercantil</li>
-                  <li class="llista"><span class="blue-dash">–</span>Confecció i presentació liquidacions trimestrals (111, 115, 303, 349,..)</li>
-                  <li class="llista"><span class="blue-dash">–</span>Confecció i presentació resums anuals (180,190, 347, 390,..)</li>
-                  <li class="llista"><span class="blue-dash">–</span>Confecció i presentació Impost de Societats i Comptes anuals.</li>
-                  <li class="llista"><span class="blue-dash">–</span>Confecció i presentació recursos Agència Tributària</li>
-                  <li class="llista"><span class="blue-dash">–</span>Assistència Inspeccions Tributàries</li>
-                  <li class="llista"><span class="blue-dash">–</span>Estudi i elaboració informes econòmics-financers i Plans de Viabilitat</li>
-                  <li class="llista"><span class="blue-dash">–</span>Redacció contractes mercantils</li>
-                  <li class="llista"><span class="blue-dash">–</span>Assessorament laboral</li>
-                  <li class="llista"><span class="blue-dash">–</span>Confecció contractes de treball, nòmines, Seguros Socials</li>
-                </ul>
-              </div>
-            </div>
+          <h5>Els nostres serveis per les</h5>
+          <h2 id="prova_boto">PIMES i Startups</h2>
+          <div class="stroke-titol"></div>
+          <h3>Assessorem als emprenedors que comencen i a la petita empresa</h3>
+
+          <div class="contenidor-esquerra">
+            <ul class="serveis">
+              <li class="llista"><span class="blue-dash">–</span>Constitució Societats</li>
+              <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
+              <li class="llista"><span class="blue-dash">–</span>Elaboració comptabilitat i presentació llibres comptables al Registre Mercantil</li>
+              <li class="llista"><span class="blue-dash">–</span>Confecció i presentació liquidacions trimestrals (111, 115, 303, 349,..)</li>
+              <li class="llista"><span class="blue-dash">–</span>Confecció i presentació resums anuals (180,190, 347, 390,..)</li>
+              <li class="llista"><span class="blue-dash">–</span>Confecció i presentació Impost de Societats i Comptes anuals.</li>
+            </ul>
           </div>
+          <div class="contenidor-dreta">   
+            <ul class="serveis">  
+              <li class="llista"><span class="blue-dash">–</span>Confecció i presentació recursos Agència Tributària</li>
+              <li class="llista"><span class="blue-dash">–</span>Assistència Inspeccions Tributàries</li>
+              <li class="llista"><span class="blue-dash">–</span>Estudi i elaboració informes econòmics-financers i Plans de Viabilitat</li>
+              <li class="llista"><span class="blue-dash">–</span>Redacció contractes mercantils</li>
+              <li class="llista"><span class="blue-dash">–</span>Assessorament laboral</li>
+              <li class="llista"><span class="blue-dash">–</span>Confecció contractes de treball, nòmines, Seguros Socials</li>
+            </ul>
+          </div>
+            
         </section>
 
           <!-- 4-Gran Empresa -->
@@ -263,7 +257,7 @@
           </div>
           </div>              
         </section>
-      </div>
+      </main> 
 
      <!-- Footer -->
       <footer>
